[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kryten-api-gate"
version = "0.3.1"
description = "HTTP REST gateway for the Kryten ecosystem — exposes KrytenClient via FastAPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "grobertson" },
]
dependencies = [
    "kryten-py>=0.15.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
kryten-api-gate = "kryten_api_gate.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kryten_api_gate"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
